[package]
name = "cryptopals_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "cryptopals_rust"
crate-type = ["cdylib"]
path = "rust/lib.rs"

[dependencies.pyo3]
version = "0.20.3"
features = ["extension-module"]

[dependencies]
hex = "^0.4"
base64 = "0.22.0"
rustls = "0.23.1"

[build-dependencies]
maturin = "1.5.0"
pyproject-toml = "0.10.0"
cmake = "0.1.48"


