[tool.poetry]
name = "cryptopals"
version = "0.1.0"
description = "Cryptopals"
authors = ["slgeay <avomailbox-github@yahoo.fr>"]
packages = [
    {"include" = "**/*.py", from = "python"},
]

[tool.poetry.dependencies]
python = "3.11.4"
click = "^8.1.3"
maturin = "= 1.5.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.961"
pytest = "^7.1.2"
pytest-benchmark = "^3.4.1"
pytest-xdist = "^2.5.0"
cmake = "^3.28.3"
clang = "^16.0.6"
libclang = "^16.0.6"


[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "--benchmark-disable -p no:nose"

[tool.poetry.scripts]
app = "python.main:main"

[tool.black]
line-length = 1000
